--- a/clients/WinForms/WindowsFormsClient/Properties/Resources.resx
+++ b/clients/WinForms/WindowsFormsClient/Properties/Resources.resx
@@ -134,7 +134,7 @@
     <value>Хлопок 90°</value>
   </data>
   <data name="Program_6" xml:space="preserve">
-    <value />
+    <value>Синтетика 60°</value>
   </data>
   <data name="Program_4" xml:space="preserve">
     <value>Хлопок 40°</value>
@@ -168,5 +168,50 @@
   </data>
   <data name="thermometer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\thermometer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Program_10" xml:space="preserve">
+    <value>Шерсть</value>
+  </data>
+  <data name="Program_11" xml:space="preserve">
+    <value>Шелк</value>
+  </data>
+  <data name="Program_12" xml:space="preserve">
+    <value>Полоскание</value>
+  </data>
+  <data name="Program_13" xml:space="preserve">
+    <value>Деликатное полоскание</value>
+  </data>
+  <data name="Program_14" xml:space="preserve">
+    <value>Отжим</value>
+  </data>
+  <data name="Program_15" xml:space="preserve">
+    <value>Деликатный отжим</value>
+  </data>
+  <data name="Program_16" xml:space="preserve">
+    <value>Слив</value>
+  </data>
+  <data name="Program_17" xml:space="preserve">
+    <value>Слив шлангов</value>
+  </data>
+  <data name="Program_18" xml:space="preserve">
+    <value>Водонагреватель</value>
+  </data>
+  <data name="Program_19" xml:space="preserve">
+    <value>Притирка щеток</value>
+  </data>
+  <data name="Program_7" xml:space="preserve">
+    <value>Синтетика 50°</value>
+  </data>
+  <data name="Program_8" xml:space="preserve">
+    <value>Синтетика 40°</value>
+  </data>
+  <data name="Program_9" xml:space="preserve">
+    <value>Синтетика 30°</value>
+  </data>
+  <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
