--- a/clients/WinForms/Localization_Ru-Ru/Properties/Resources.resx
+++ b/clients/WinForms/Localization_Ru-Ru/Properties/Resources.resx
@@ -183,7 +183,7 @@
   <data name="Program_19" xml:space="preserve">
     <value>Притирка щеток</value>
   </data>
- <data name="Stage_1" xml:space="preserve">
+  <data name="Stage_1" xml:space="preserve">
     <value>Stage_1</value>
   </data>
   <data name="Stage_2" xml:space="preserve">
@@ -204,7 +204,10 @@
   <data name="Status_ConnectionBreak" xml:space="preserve">
     <value>Connection break</value>
   </data>
- <data name="Status_Washing" xml:space="preserve">
+  <data name="Status_Washing" xml:space="preserve">
     <value>{0}: {1}</value>
+  </data>
+  <data name="Status_Connecting" xml:space="preserve">
+    <value>Подключение...</value>
   </data>
 </root>
