--- a/clients/WinForms/WindowsFormsClient/Properties/Resources.resx
+++ b/clients/WinForms/WindowsFormsClient/Properties/Resources.resx
@@ -301,4 +301,7 @@
   <data name="Status_ConnectFailed" xml:space="preserve">
     <value>Connection error: {0}</value>
   </data>
+  <data name="link" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\link.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
